# rfp-finder

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DEVELOPMENT_PLAN.md  PROFILE_SETUP.md  SCORING.md  SOLUTIONS_APPROACH.md
docs/schemas/: NORMALIZED_OPPORTUNITY.md  USER_PROFILE.md
profiles/: example.yaml  my-profile.yaml
scripts/: test_bidsandtenders_live.py
src/rfp_finder/: __init__.py  matching.py  pipeline.py
src/rfp_finder/attachments/: __init__.py  enricher.py  extractor.py  fetcher.py
src/rfp_finder/cli/: __init__.py  main.py
src/rfp_finder/connectors/: __init__.py  base.py  registry.py
src/rfp_finder/connectors/bidsandtenders/: __init__.py  connector.py  constants.py  parsers.py  tenants.py
src/rfp_finder/connectors/canadabuys/: __init__.py  connector.py  (+2 more)
src/rfp_finder/filtering/: __init__.py  engine.py  rules.py
src/rfp_finder/models/: __init__.py  opportunity.py  profile.py  raw.py
src/rfp_finder/scoring/: __init__.py  llm.py  similarity.py
src/rfp_finder/store/: __init__.py  attachment_cache.py  example_store.py  schema.sql  sqlite_store.py
tests/: __init__.py  conftest.py  test_attachments.py  test_base_connector.py  test_bidsandtenders_connector.py  test_bidsandtenders_parsers.py  test_bidsandtenders_tenants.py  test_canadabuys_connector.py  test_canadabuys_parsers.py  test_connector_registry.py  test_filter_engine.py  test_filter_integration.py  test_filter_rules.py  test_ingest_integration.py  test_ingest_store_integration.py  test_matching.py  test_models.py  test_profile.py  test_scoring_llm.py  test_store.py
